# mcpnew1c

./: .env.example  .gitignore  Dockerfile  README.md  env_options.json  mcp_instance.py  pyproject.toml  test_server.py
.github/: copilot-instructions.md
src/: server.py
tests/: test_hello.py
